<resources>
    <string name="app_name">Sound Pad</string>
    <string name="help">Help</string>
    <string name="play">Play</string>
    <string name="playing">Playing</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="delete_one">Delete 1</string>
    <string name="delete_two">Delete 2</string>
    <string name="delete_three">Delete 3</string>
    <string name="delete_four">Delete 4</string>
    <string name="delete_five">Delete 5</string>
    <string name="delete_six">Delete 6</string>
    <string name="delete_seven">Delete 7</string>
    <string name="delete_eight">Delete 8</string>
    <string name="delete_nine">Delete 9</string>
    <string name="delete_ten">Delete 10</string>
    <string name="delete_eleven">Delete 11</string>
    <string name="delete_twelve">Delete 12</string>
    <string name="delete_thirteen">Delete 13</string>
    <string name="delete_fourteen">Delete 14</string>
    <string name="delete_fifteen">Delete 15</string>
    <string name="delete_sixteen">Delete 16</string>
    <string name="delete_seventeen">Delete 17</string>
    <string name="delete_eighteen">Delete 18</string>
    <string name="delete_nineteen">Delete 19</string>
    <string name="delete_twenty">Delete 20</string>
    <string name="no_recording">No Recording</string>
    <string name="recording">Recording</string>
    <string name="stop_recording">Recording</string>
    <string name="recording_in_progress">Recording in progress</string>
    <string name="delete_recordings">Delete Recordings</string>
    <string name="delete_all_recordings">Delete All Recordings</string>
    <string name="contentDescriptionNotAvailable">Content Description Not Available</string>
    <string name="audio_required_text">This application requires audio permissions to be enabled in order to function. Please head over to your Android Settings and enable recording audio permissions for SoundPad</string>
    <string name="google_ads_required_text">This app is using personalized ads to bring you a better experience as well as to support development. Please head over to your Android settings and enable tracking for SoundPad</string>
    <string name="help_one">1. SoundPad will record up to 20 custom recordings and save them for you.</string>
    <string name="help_two">2. Deleting the application and re-installing will remove all saved recordings.</string>
    <string name="help_three">3. If you wish to delete recordings tap the button below. The delete buttons are mapped respectively to each recording box.</string>
    <string name="help_four">4. Based on user feedback; support for importing custom sounds will be included.</string>
    <string name="help_five">5. If you are recoding something and you do not hear a playback. Make sure your phone is not on silent and your volume is not muted.</string>
    <string name="content_description_na">Content Description Not Available</string>
</resources>