<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor">
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/appIconImage"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:background="@drawable/appicon_beige"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/helpButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:background="@drawable/round_help_button_4"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/rowOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/helpButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundOne"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundTwo"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundThree"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundFour"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:layout_height="90dp"
            android:text="@string/record"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/rowOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundFive"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:layout_height="90dp"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundSix"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="90dp"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundSeven"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:layout_height="90dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundEight"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/rowTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundNine"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:layout_height="90dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundTen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundEleven"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:layout_height="90dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundTwelve"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/rowThree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundThirteen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_margin="2dp"
            android:layout_height="90dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundFourteen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundFifteen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundSixteen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rowFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/rowFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundSeventeen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundEighteen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundNineteen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/soundTwenty"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:textColor="@color/black"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_record_button_8"
            android:textAllCaps="false"
            android:text="@string/record"/>

    </LinearLayout>

    <View
        android:id="@+id/recordingBackgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/colorSecondary"
        android:visibility="gone"
        tools:visibility="visible" />
    <TextView
        android:id="@+id/recordingInProgressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/recording"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stopRecordingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:background="@drawable/rounded_stop_button_8"
        android:textColor="@color/white"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rowFive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/mainLayoutGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="titleTextView , appIconImage , helpButton ,rowOne, rowTwo, rowThree, rowFour, rowFive" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/recordingInProgressScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="stopRecordingButton, recordingInProgressText, recordingBackgroundView" />



</androidx.constraintlayout.widget.ConstraintLayout>